# engineering-django

./: README.md
playground/: .env  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
playground/topic_ddd/: Makefile  pytest.ini
playground/topic_ddd/example1/: const.py
playground/topic_ddd/example2/: views.py
playground/topic_ddd/example2/migrations/: 0001_initial.py
playground/topic_ddd/example2/tests/: test_example2.py
playground/topic_ddd/example3/: const.py
playground/topic_ddd/example3/migrations/: 0001_initial.py
playground/topic_ddd/example3/tests/: test_example3.py
playground/topic_ddd/example4/: models.py  serializers.py
playground/topic_ddd/topic_ddd/: urls.py
playground/topic_error/: manage.py
playground/topic_error/example1/: models.py  views.py
playground/topic_error/example1/migrations/: 0001_initial.py
playground/topic_error/example2/: models.py  views.py
playground/topic_error/example2/migrations/: 0001_initial.py
playground/topic_error/example2/migrations/topic_ddd/: manage.py
playground/topic_error/example2/migrations/topic_ddd/example1/: models.py  views.py
playground/topic_error/example2/migrations/topic_ddd/example2/: models.py
playground/topic_error/example2/migrations/topic_ddd/example3/: models.py  views.py
playground/topic_error/example2/migrations/topic_ddd/example4/: apps.py  services.py  views.py
playground/topic_error/example2/migrations/topic_ddd/topic_ddd/: asgi.py  settings.py  wsgi.py
playground/topic_error/topic_error/: asgi.py  errors.py  middlewares.py  settings.py  urls.py  wsgi.py
(+7 files in other folders)
