[tool.poetry]
name = "engineering-django"
version = "0.0.1"
description = "explanation code for engineering django"
authors = ["Provinm"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
django = "^4.2"
django-redis = "^5.2.0"
pymysql = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-django = "^4.7.0"
pytest-env = "^1.1.3"

